@@ -1,3 +1,9 @@
+2002-07-08  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtk-types.c (PyGdkRectangle_to_value): add custom boxed
+	handlers for GDK_TYPE_RECTANGLE, so that 4-sequences can
+	automatically be marshaled to GdkRectangle values.
+
 2002-07-07  James Henstridge  <james@daa.com.au>
 
 	* pygobject.c (pygobject_get_refcount): add __grefcount__ property.
